Made Java 1.4 compliant.